# SMEFT19-notebooks

./: .buildinfo  Dockerfile  LICENSE  README.html  README.md  _config.yml  _toc.yml  apt.txt  demo.ipynb  environment.yml  genindex.html  jupyter_config.json  objects.inv  pyproject.toml  requirements.txt  run_nb.sh  search.html  searchindex.js  test.dockerfile
.devcontainer/: devcontainer.json
PaperILC/: 01_ILCProspects.html  01_ILCProspects.ipynb  02_LikelihoodFits.html  03_RKRD.html  03_RKRD.ipynb  README.html  README.md  RKnew.html  Untitled.html
PaperML/: 01_fits.html  01_fits.ipynb  02_plotfits.html  02_plotfits.ipynb  03_RKRD.html  03_RKRD.ipynb  04_TrainingDatasets.html  04_TrainingDatasets.ipynb  05_Training.html  05_Training.ipynb  06_correlations.html  06_correlations.ipynb  07_newplots.ipynb  08_minifits.ipynb  09_RJpsi.ipynb  Fits.html  README.html  README.md  Untitled.ipynb  run.py  run_obs.py  run_random.py  scenarioIII.py
PaperSMEFT/: 01_Fits.html  01_Fits.ipynb  02_LikelihoodPlots.html  02_LikelihoodPlots.ipynb  03_RKRD.html  03_RKRD.ipynb  04_ScenarioVII.html  04_ScenarioVII.ipynb  README.html  README.md  Untitled.html
_sources/: README.md
_sources/PaperILC/: 01_ILCProspects.ipynb  01_ILCProspects.ipynb.bak  02_LikelihoodFits.ipynb  02_LikelihoodFits.ipynb.bak  03_RKRD.ipynb  03_RKRD.ipynb.bak  README.md  RKnew.ipynb  Untitled.ipynb  Untitled.ipynb.bak
_sources/PaperML/: 01_fits.ipynb  01_fits.ipynb.bak  02_plotfits.ipynb  02_plotfits.ipynb.bak  03_RKRD.ipynb  03_RKRD.ipynb.bak  04_TrainingDatasets.ipynb  04_TrainingDatasets.ipynb.bak  (+6 more)
(+101 files in other folders)
